fixing overflow issues

--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@ body {
 	font-family: 'Poppins', sans-serif;
 	font-size: 14px;
 }
+
+body, html {
+	overflow-x: hidden;
+}
+
 a {
 	color:#5f0099;
 }
@@ -43,6 +48,7 @@ h6 {
 
 .navbar .navbar-brand {
 }
+
 .navbar .nav-item {
 	margin: 0 5px;
 	padding: 0;
@@ -339,8 +345,10 @@ h6 {
 .single-feature p {
 	font-size: 13px;
 }
+
 .icon-border {
 }
+
 .icon-border span {
 	display: block;
 	position: relative;
@@ -473,6 +481,10 @@ input {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
+}
+
+input[type="time"]::selection {
+	background: #7a60ff;
 }
 
 .choices__list--dropdown {
